# VoxtauEngine

./: CMakeLists.txt  Engine.cpp  EngineApi.h  README.md
Assets/Data/: blocks.json
Assets/Shaders/Compute/: BuildDrawArgs.hlsl  ChunkMesh.hlsl  ChunkMesh_old.hlsl
Assets/Shaders/Culling/: frustum_cull.compute.hlsl
Assets/Shaders/Debug/: debug_line.vert.hlsl
Assets/Shaders/Entity/: entity.pixel.hlsl  skinned_entity.vert.hlsl
Assets/Shaders/PostProcess/: composite.pixel.hlsl  tonemapping.pixel.hlsl
Assets/Shaders/PostProcess/Effects/: template.hlsl
Assets/Shaders/Shadow/: shadow.pixel.hlsl  shadow.vert.hlsl  shadow_raytrace.compute.hlsl
Assets/Shaders/Sky/: sky.pixel.hlsl  sky.vert.hlsl
Assets/Shaders/Terrain/: distant_terrain.pixel.hlsl
Assets/Shaders/UI/: ui.pixel.hlsl  ui.vert.hlsl
Assets/Shaders/Voxel/: voxel_gpu.pixel.hlsl  voxel_gpu.vert.hlsl
Core/: Application.cpp  Application.h
Core/Entity/: Entity.cpp  Entity.h  EntityID.h  EntityManager.cpp  EntityManager.h  EntityType.h
Core/Entity/Living/: LivingEntity.cpp  LivingEntity.h
Core/Entity/Living/Player/: PlayerController.cpp  PlayerController.h  PlayerEntity.cpp  PlayerEntity.h
Core/Input/: InputManager.cpp  InputManager.h
Core/Math/: Frustum.cpp  Frustum.h  MathTypes.h  MathUtils.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Core/Math/Noise/: PerlinNoise.cpp  PerlinNoise.h
Core/Network/: NetContext.cpp  NetContext.h
Core/Network/Client/: ClientSession.cpp  ClientSession.h  EntityInterpolator.cpp  EntityInterpolator.h
Core/Network/Protocol/: BitStream.h  InputButton.h  PacketSerializer.h  PacketTypes.h  PlayerInputState.h  ServerSnapshot.h
Core/Network/Replication/: EntityReplicator.cpp  EntityReplicator.h  Repfield.h  Repfield.inl
Core/Network/Server/: ClientProxy.h  ServerInstance.cpp  ServerInstance.h
Core/Network/Transport/: ENetTransport.cpp  ENetTransport.h  INetworkTransport.h  LocalTransport.cpp  LocalTransport.h
Core/Physics/Voxtau/: AABB.h  VoxelBody.h  VoxelPhysics.cpp  VoxelPhysics.h
Core/Procedural/: IStructureGenerator.h  StructurePlacer.cpp  StructurePlacer.h
Core/Profiler/: Profiler.cpp  Profiler.h
Core/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Transform.cpp  Transform.h
Core/Voxel/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  IChunkGenerator.h  Voxel.cpp  Voxel.h  VoxelType.cpp  VoxelType.h
Core/World/: IWorldGenerator.h
Demo/: DemoGameplayScene.cpp  DemoGameplayScene.h
EngineAssets/Shaders/Compute/Culling/: FrustumCull.hlsl
EngineAssets/Shaders/Debug/: debug_line.pixel.hlsl
EngineAssets/Shaders/Entity/: entity.vert.hlsl
EngineAssets/Shaders/PostProcess/: blit.pixel.hlsl  fullscreen.vert.hlsl
EngineAssets/Shaders/Sky/: sky.pixel.hlsl
EngineAssets/Shaders/Terrain/: distant_terrain.vert.hlsl
EngineAssets/Shaders/Voxel/: voxel.pixel.hlsl  voxel.vert.hlsl
EngineAssets/Shaders/Water/: water.pixel.hlsl  water.vert.hlsl
Renderer/: RenderPipeline.cpp  RenderPipeline.h  RenderStates.h  RenderTarget.cpp  RenderTarget.h  Vertex.h
Renderer/Debug/: DebugLineRenderer.cpp  DebugLineRenderer.h
Renderer/Entity/: EntityRenderer.cpp  EntityRenderer.h
Renderer/PostProcess/: PostProcessPipeline.cpp  PostProcessPipeline.h
Renderer/RenderApi/: IRendererApi.h
Renderer/RenderApi/DirectX11/: DirectX11Mesh.cpp  DirectX11Mesh.h  DirectX11Renderer.cpp  DirectX11Renderer.h  DirectX11Texture.cpp  DirectX11Texture.h  DirectX11TextureArray.cpp  DirectX11TextureArray.h
Renderer/Shaders/: Shader.cpp  Shader.h  ShaderCollection.cpp  ShaderCollection.h  ShaderProgram.cpp  ShaderProgram.h  ShaderTypes.h
Renderer/Sky/: SkyRenderer.cpp  SkyRenderer.h
Renderer/Voxel/: DistantTerrainRenderer.cpp  DistantTerrainRenderer.h  VoxelRenderer.cpp  VoxelRenderer.h
Resources/: BlockRegistry.cpp  BlockRegistry.h  Mesh.cpp  Mesh.h  MeshGenerator.cpp  MeshGenerator.h  ResourceManager.cpp  ResourceManager.h  SkinnedMesh.cpp  SkinnedMesh.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  TextureData.cpp  TextureData.h  TextureGenerator.cpp  TextureGenerator.h  VoxelMesh.cpp  VoxelMesh.h
Resources/Animation/: AnimationClip.cpp  AnimationClip.h  Animator.cpp  Animator.h  Skeleton.cpp  Skeleton.h
Resources/ModelLoader/: ModelLoader.cpp  ModelLoader.h
Resources/ModelLoader/Vox/: VoxLoader.cpp  VoxLoader.h  VoxMesher.cpp  VoxMesher.h  VoxModel.h
UI/Debug/: CompassWindow.cpp  CompassWindow.h  ImGuiManager.cpp  ImGuiManager.h  PerformanceWindow.cpp  PerformanceWindow.h  ProfilerWindow.cpp  ProfilerWindow.h  SceneHierarchyWindow.cpp  SceneHierarchyWindow.h
